Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2013-10-29 (SVN):
    * modified the amiga files to compile on AmigaOS 3.

2013-10-23 (SVN):
    * snd_umx.c: support umx files from unreal 1997/98 beta version.

2013-10-15 (SVN):
    * snd_mikmod.c: fix return type of the Seek function.
    * snd_umx.c: update XM detection. other minor tidy-ups.
    * update version date stamp to 2013-10-15.

2013-09-27 (SVN):
    * add new stdio replacement FS_fgetc() and use it in snd_mikmod.c
    * update version date stamp to 2013-09-27.

2013-09-25 (SVN):
    * replace all ctype.h functions/macros and strcasecmp/strncasecmp()
      by locale-insensitive versions, new header q_ctype.h.
    * update version date stamp to 2013-09-25.

2013-09-24 (SVN):
    * update version date stamp to 2013-09-24.
    * support for Unreal UMX container. not enabled by default: edit the
      Makefile for USE_CODEC_UMX or add "USE_CODEC_UMX=yes" to your make
      command line arguments.
    * snd codec layer updates: changed codec_open() to operate only on a
      stream pointer and moved all file open/close stuff to snd_codec.c.
      codec_open now only returns true or false upon success or failure
      instead of a stream pointer. added new snd_codec.c toplevel helper
      S_CodecForwardStream(), which allows one codec to hand over its
      stream from its codec_open() to another codec.
    * some tidy-up in FS* stdio replacement functions. add FS_filelength
      to the FS_* api.

2013-09-23 (SVN):
    * added tracker music (mod) support. it is not enabled by default,
      edit Makefile for either USE_CODEC_MIKMOD or USE_CODEC_MODPLUG, or
      add "USE_CODEC_MIKMOD=yes" to your make command line arguments.

2013-08-12 (SVN):
    * cd_win.c (CDAudio_Init): if the user gave a valid -cddev argument,
      include MCI_OPEN_ELEMENT among the sent MCI flags.
    * update version date stamp to 2013-08-12.