@@ -252,13 +252,12 @@ static STRPTR pattern_helper (const char *pat)
 	const char	*p;
 	int	n;
 
-	for (n = 0, p = pat; p != NULL; )
+	for (n = 0, p = pat; *p != '\0'; )
 	{
-		p = strchr (p, '*');
-		if (p != NULL)
-		{
-			++n;	++p;
-		}
+		if ((p = strchr (p, '*')) == NULL)
+			break;
+		++n;
+		++p;
 	}
 
 	if (n == 0)
@@ -646,13 +645,13 @@ char *Sys_GetClipboardData (void)
 	char *chunk_buffer = NULL;
 
 	if ((IFFHandle = AllocIFF())) {
-		if ((IFFHandle->iff_Stream = (IPTR) OpenClipboard(0))) {
+	    if ((IFFHandle->iff_Stream = (IPTR) OpenClipboard(0))) {
 		InitIFFasClip(IFFHandle);
 		if (!OpenIFF(IFFHandle, IFFF_READ)) {
-			if (!StopChunk(IFFHandle, ID_FTXT, ID_CHRS)) {
+		    if (!StopChunk(IFFHandle, ID_FTXT, ID_CHRS)) {
 			if (!ParseIFF(IFFHandle, IFFPARSE_SCAN)) {
-				cn = CurrentChunk(IFFHandle);
-				if (cn && (cn->cn_Type == ID_FTXT) &&
+			    cn = CurrentChunk(IFFHandle);
+			    if (cn && (cn->cn_Type == ID_FTXT) &&
 					(cn->cn_ID == ID_CHRS)) {
 				chunk_buffer = (char *)
 					  Z_Malloc(MAX_CLIPBOARDTXT, Z_MAINZONE);
@@ -660,16 +659,16 @@ char *Sys_GetClipboardData (void)
 							   chunk_buffer,
 							   MAX_CLIPBOARDTXT - 1);
 				if (readbytes < 0)
-					readbytes = 0;
+				    readbytes = 0;
 				chunk_buffer[readbytes] = '\0';
-				}
+			    }
 			}
-			}
-			CloseIFF(IFFHandle);
+		    }
+		    CloseIFF(IFFHandle);
 		}
 		CloseClipboard((struct ClipboardHandle *) IFFHandle->iff_Stream);
-		}
-		FreeIFF(IFFHandle);
+	    }
+	    FreeIFF(IFFHandle);
 	}
 
 	return chunk_buffer;
@@ -870,8 +869,8 @@ int main (int argc, char **argv)
 	/* main window message loop */
 	while (1)
 	{
-		if (isDedicated)
-		{
+	    if (isDedicated)
+	    {
 		newtime = Sys_DoubleTime ();
 		time = newtime - oldtime;
 
@@ -884,9 +883,9 @@ int main (int argc, char **argv)
 
 		Host_Frame (time);
 		oldtime = newtime;
-		}
-		else
-		{
+	    }
+	    else
+	    {
 #if defined(SDLQUAKE)
 		appState = SDL_GetAppState();
 		/* If we have no input focus at all, sleep a bit */
@@ -914,7 +913,7 @@ int main (int argc, char **argv)
 			Sys_Sleep(1);
 
 		oldtime = newtime;
-		}
+	    }
 	}
 
 	return 0;
