@@ -43,10 +43,10 @@ static BPTR		amiga_stdin, amiga_stdout;
 
 struct timerequest	*timerio;
 struct MsgPort		*timerport;
-#ifdef __AROS__
-struct Device		*TimerBase;
-#else
+#ifdef __MORPHOS__
 struct Library		*TimerBase;
+#else
+struct Device		*TimerBase;
 #endif
 
 
@@ -150,10 +150,10 @@ static void Sys_Init (void)
 			if (OpenDevice((STRPTR) TIMERNAME, UNIT_MICROHZ,
 					(struct IORequest *) timerio, 0) == 0)
 			{
-#ifdef __AROS__
-				TimerBase = timerio->tr_node.io_Device;
-#else
+#ifdef __MORPHOS__
 				TimerBase = (struct Library *)timerio->tr_node.io_Device;
+#else
+				TimerBase = timerio->tr_node.io_Device;
 #endif
 			}
 			else
